4-example/0-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    monitoring: prometheus
    istio-injection: enabled
