4-example/2-deployment-v2.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: third-app-v2
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: third-app
      version: v2
  template:
    metadata:
      labels:
        app: third-app
        version: v2
        istio: monitor
    spec:
      containers:
        - image: aputra/myapp-lesson155:latest
          imagePullPolicy: Always
          name: third-app
          ports:
            - name: http
              containerPort: 8080
