4-example/3-myapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: third-app
  namespace: dev
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: third-app
