4-example/4-destination-rule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: third-app
  namespace: dev
spec:
  host: third-app
  subsets:
    - name: v1
      labels:
        app: third-app
        version: v1
    - name: v2
      labels:
        app: third-app
        version: v2
